# SnackGame

./: CMakeLists.txt  README.md
lib/: Game.h  Snake.h
src/: Food.h  Game.cpp  Game.h  Main.cpp  Position.h  Snake.cpp
test/: TestingFood.cpp  TestingGame.cpp  TestingPosition.cpp  TestingSnake.cpp  testing.cpp
